# Physcial-Humaniod-TextBook

./: .gitignore  .markdownlint.json  404.html  IMPLEMENTATION_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PR_INSTRUCTIONS.md  README.md  docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js  sitemap.xml  sp-constitution.yaml  vercel.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.docusaurus/docusaurus-plugin-content-blog/default/: blogMetadata-default.json
.docusaurus/docusaurus-plugin-content-docs/default/: site-docs-citation-guide-md-cb3.json  site-docs-final-review-fact-check-report-md-fb2.json  site-docs-final-review-final-review-process-md-ba7.json  site-docs-final-review-plagiarism-check-report-md-7c8.json  site-docs-final-review-project-summary-md-1b8.json  site-docs-intro-mdx-f84.json  site-docs-module-1-chapter-1-mdx-038.json  (+16 more)
.github/workflows/: main.yml
.specify/memory/: constitution.md
assets/css/: styles.335eaf51.css  styles.d5be5507.css
assets/js/: 038ba82e.2cd2f880.js  038ba82e.73397e51.js  0a09eec7.99b9a94b.js  0a09eec7.b454cc5c.js  0a09eec7.f25b0947.js  17896441.4269d97b.js  17896441.893fbfca.js  1b88cea5.19c13459.js  1b88cea5.6ecf390a.js  1b88cea5.ba302ca2.js  1df93b7f.2fc29c28.js  1df93b7f.a30ffb5a.js  22a83044.2a40ccfa.js  22a83044.7f08c0f7.js  237.67f98f8a.js  28a8238f.c3453ac5.js  28a8238f.cb54a4d1.js  376d39b9.8b66358d.js  376d39b9.c17bd24c.js  3d97ef5b.ba2e25e2.js  3d97ef5b.f0dea710.js  5e95c892.60cf9540.js  68ceaf6a.8fed4ac7.js  68ceaf6a.deecb0d9.js  79289d01.880e32ab.js  79289d01.aa6741e7.js  7ba22ff6.b9fcbc66.js  7c110bd0.1d61a362.js  7c83f50f.2fd9ae0e.js  7c83f50f.557381a1.js  7c83f50f.7d5c567e.js  8263a4ae.093c04fe.js  8263a4ae.cd1d1dbd.js  8263a4ae.e27eb26e.js  9bb2d112.875d0dd8.js  9bb2d112.a545b0d8.js  9bb2d112.e8735af2.js  a7bd4aaa.d75b0a06.js  a9137983.2c1cf225.js  a9137983.7a8e2779.js  (+34 more)
backend/: requirements.txt
backend/app/: main.py
capstone/: INTEGRATION.md  README.md  evaluation_rubric.md  openvla_finetune.ipynb  package.xml  setup.py
capstone/capstone/: integration_node.py  llm_planner.py  nlu_processor.py  ros_executor.py  voice_processor.py
capstone/config/: capstone_params.yaml
capstone/launch/: complete_system.launch.py  integrated_system.launch.py  real_robot.launch.py  simulation.launch.py  voice_control.launch.py
capstone/rviz/: capstone_system.rviz
capstone/urdf/: humanoid.urdf
capstone/worlds/: empty.world
datasets/: README.md  create_basic_dataset.py  create_dataset_and_weights.py  generate_pretrained_weights.py  generate_trajectories.py
datasets/datasets/: README.md  SUMMARY.md
docker/: Dockerfile
docker/gazebo_env/: Dockerfile  README.md  launch_humanoid_gazebo.launch.py  load_urdf.py
docker/isaac_sim_env/: Dockerfile  README.md  isaac_sim_bridge_config.json  setup_isaac_sim.sh
docs/: intro.mdx  review_process.md
docs/citation_guide/: index.html
docs/final_review/: fact_check_report.md  final_review_process.md  plagiarism_check_report.md  project_summary.md
docs/intro/: index.html
docs/module1/: chapter1.mdx  chapter3.mdx  chapter4.mdx  chapter5.mdx
docs/module2/: chapter9.mdx
docs/module3/: chapter10.mdx  chapter12.mdx
docs/module4/: chapter13.mdx
docs/review_process/: index.html
frontend/: docusaurus.config.js  sidebars.js
frontend/docs/: citation_guide.md
instructor_resources/: README.md
plugins/thebe-plugin/: index.js
specs/: 00-constitution.yaml  01-frontend.yaml  02-backend.yaml  03-rag-chatbot.yaml  04-book-content.yaml  05-auth-personalization.yaml  06-translation-urdu-roman.yaml  07-advanced-bonus.yaml
specs/00-physical-ai-humanoid-robotics-2025/: impl-plan.md
specs/0001-physical-ai-textbook/: plan.md  spec.md  tasks.md
specs/01-docusaurus-frontend-interactive/: spec.md
specs/02-fastapi-backend/: spec.md
specs/03-rag-chatbot/: spec.md
specs/04-book-content/: spec.md
specs/05-auth-personalization/: spec.md
specs/06-translation-urdu-roman/: spec.md
specs/08-landing-page-enhancement/: spec.md
specs/99-landing-body-only/: data-model.md  impl-plan.md  quickstart.md  research.md  tasks.md
src/css/: custom.css
src/evaluation_framework/: README.md  evaluation_framework.py  run_evaluation.py
src/isaac_gym_rl/: README.md  package.xml  rl_humanoid_walking.py  setup.py
src/isaac_sim_integration/: README.md  isaac_sim_integration.py  main.py  package.xml  requirements.txt  setup.py
src/isaac_sim_integration/config/: integration_config.yaml
src/isaac_sim_integration/launch/: integrated_simulation.launch.py
src/isaac_sim_ros_bridge/: CMakeLists.txt  README.md  package.xml  ros_bridge.py  setup.py
src/isaac_sim_ros_bridge/config/: bridge_params.yaml
src/isaac_sim_ros_bridge/launch/: isaac_sim_bridge.launch.py
src/isaac_sim_ros_bridge/scripts/: setup_isaac_sim_env.sh
src/isaac_sim_validation/: README.md  requirements.txt  run_validation.py  validation_framework.py
src/nav2_humanoid/: CMakeLists.txt  README.md  package.xml  setup.py
src/nav2_humanoid/behavior_trees/: humanoid_navigate_w_replanning_and_recovery.xml
src/nav2_humanoid/config/: humanoid_nav2_params.yaml  humanoid_navigate_to_pose_w_replanning_and_recovery.xml  nav2_params.yaml
src/nav2_humanoid/launch/: humanoid_navigation.launch.py  humanoid_navigation_launch.py
src/nav2_humanoid/nav2_humanoid/: humanoid_navigator.py
src/pages/: index.module.css  index.tsx
src/perception_pipeline/: README.md  package.xml  setup.py
src/ros2_workspaces/: README.md
src/sim_to_real_validation/: README.md  package.xml  run_evaluation.py  sim_to_real_evaluator.py
src/sim_to_real_validation/config/: validation_config.yaml
src/urdf_models/: README.md  advanced_humanoid.urdf  humanoid_with_description.urdf  simple_humanoid.sdf  simple_humanoid.urdf  simple_humanoid_v2.urdf  simulation_humanoid.urdf
src/verification/: README.md  verify_examples.sh
(+636 files in other folders)
